--- a/Final Project/Final-Project-Proposal.html
+++ b/Final Project/Final-Project-Proposal.html
@@ -1464,11 +1464,14 @@ Broomes</h4>
 
 <div id="introduction" class="section level2">
 <h2>Introduction:</h2>
-<p>Our dataset comes from <a href="https://data.cityofnewyork.us/Education/2020-2021-School-Quality-Reports-High-School/26je-vkp6/about_data">OpenData’s
+<p>Our final project aims to analyze the predictive power of Department
+of Education (DOE) ratings on the academic performance of New York City
+(NYC) high schools. Leveraging data from <a href="https://data.cityofnewyork.us/Education/2020-2021-School-Quality-Reports-High-School/26je-vkp6/about_data">OpenData’s
 - School Quality Report</a> for NYC high schools between 2020 and 2021.
 Our final project will potentially include more up-to-date educational
 information and geographic data to augment our analysis.</p>
-<p>First, let’s read in our source CSV file. This is posted in our <a href>GitHub repository</a> in the interest of reproducibility.</p>
+<p>First, let’s read in our source CSV file. This is posted in our <a href="https://github.com/waheeb123/Data-621">GitHub repository</a> in
+the interest of reproducibility.</p>
 <p>There are several predictor variables of interest to us. The NYC
 School Quality Report from the Department of Education included ratings
 for schools in the following categories. We would like to see how
