--- a/Final Project/Final-Project-Proposal.html
+++ b/Final Project/Final-Project-Proposal.html
@@ -1487,14 +1487,14 @@ replaced by proxy variables? Doing so could save the Department of
 Education (DOE) time in not assigning ratings when they could have
 similar impact by knowing certain values for a school.</p>
 <p>Our response variable will be the average student’s SAT Score at a
-given school. SAT Scores are an imperfect metric given their <a href="https://www.manhattanreview.com/sat-predictor-college-success/">correlation
-with other socioeconomic factors</a>, but for our purposes can serve as
-an imperfect benchmark to measure academic performance.</p>
-<p><strong>Main research question:</strong> Do these DOE-ratings
-accurately predict whether a school will foster high academic
-performance in students, and are there other proxy variables that can be
-used to more accurately predict academic performance (measured in SAT
-scores)</p>
+given school. SAT Scores are an imperfect metric given their <a href="https://files.eric.ed.gov/fulltext/ED563073.pdf">correlation with
+other socioeconomic factors</a>, but for our purposes can serve as an
+imperfect benchmark to measure academic performance.</p>
+<p><strong>Main research question:</strong> Are DOE ratings effective
+predictors of a school’s ability to cultivate high academic achievement
+in students, and what alternative proxy variables offer improved
+accuracy in predicting academic performance, as assessed by SAT
+scores?</p>
 </div>
 <div id="eda" class="section level2">
 <h2>EDA</h2>
