--- a/Final Project/Final-Project.html
+++ b/Final Project/Final-Project.html
@@ -1304,7 +1304,7 @@ overflow: visible;
 </style>
 <style type="text/css" data-origin="pandoc">
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
@@ -1563,6 +1563,29 @@ Broomes</h4>
 </div>
 
 
+<div id="abstract" class="section level2">
+<h2>Abstract</h2>
+<p>We present a research investigation into the efficacy of the New York
+City School Quality Snapshot in forecasting the four-year college
+persistence rate among high schools in New York City. These evaluations
+play a pivotal role in shaping educational policies nationwide. While
+insights from educators and families are invaluable, they often fail to
+capture the fundamental factors that have the greatest impact on
+academic achievement. Furthermore, we construct a predictive framework
+based on proxy socioeconomic indicators (such as residence in temporary
+housing and economic necessity) to forecast the average college
+persistence rate of high schools in NYC. Our socioeconomic-based model
+surpasses a model reliant solely on data from the school quality
+snapshot, which includes input from students, parents, and educators
+within NYC’s public school system. This enhanced performance is evident
+across various diagnostic metrics, including root mean squared error,
+Akaike and Bayesian Information Criteria, and adjusted R-squared values.
+Additionally, we develop a weighted least squares model using the same
+set of proxy variables to compare modeling methodologies. While this
+model outperforms the linear model based on ratings, it introduces added
+complexity, resulting in reduced explainability compared to the direct
+use of proxy variables.</p>
+</div>
 <div id="introduction" class="section level2">
 <h2>Introduction:</h2>
 <p>Our final project aims to analyze the predictive power of Department
@@ -1620,7 +1643,47 @@ to their long-term success in life.</p>
 </div>
 <div id="literature-review" class="section level1">
 <h1>Literature Review</h1>
-<p>still searching ….</p>
+<p>A significant determinant of academic achievement is a student’s
+socioeconomic status. The National Center for Education Statistics
+(NCES) reports that students hailing from low-income households are
+almost four times as likely to discontinue their high school education
+compared to their affluent counterparts. <a href="https://nces.ed.gov/programs/coe/indicator/coj/status-dropout-rates">NCES</a>.</p>
+<p>Several prior studies have made attempts to use more sophisticated
+modeling techniques, different data sources, and different predictor
+variables to predict educational outcomes similar to what we’re trying
+to predict. In one such study,<a href="https://www.sciencedirect.com/science/article/abs/pii/S0360131520301974">Bernacki,
+Chavez and Uesbeck</a> based their modeling on trying to predict
+educational achievement based on student digital behavior, rather than
+the social factors we intend to explore. The model in this study reached
+an accuracy of 75%, and was able to flag early interventions. This
+modeling technique attempts to predict a slightly different metric of
+student success than our modeling will, and the training data and
+predictor variables differ as well.</p>
+<p>Similarly, <a href="https://www.frontiersin.org/articles/10.3389/feduc.2020.00104/full">Musso,
+Cascallar, Bostani, and, Crawford</a> attempted to train an artificial
+neural network (ANN) to identify relationships between variables and
+educational performance data. They modeled educational performance of
+Vietnamese students in grade five and included individual
+characteristics as well as information related to daily routines in
+their training data. This method uses a more sophisticated model, and
+resulted in an impressive prediction accuracy of <span class="math inline">\(95-100%\)</span>. However, as their training data
+comes from a different country with a different educational system and
+methods, it may not be prudent to compare the model’s results to those
+of our model or of any other US-centric study.</p>
+<p>In another study, a group of friends as you can see here <a href="https://www.mdpi.com/2227-7390/10/20/3758">Final grades</a>
+predicted final grade exams for Turkish students through machine
+learning models, using prior exam scores as their input variables.The
+logistic regression model is utilized to assess the actual impact of
+event context on “Fail” students in a multivariate setup. Four machine
+learning algorithms (Random Forest, XGBoost, KNN, and SVM) are applied
+using 70% of training data and 30% of test data to predict the students’
+final grades. The findings of the study clearly show that the Random
+Forest algorithm may be used to predict which students will fail after
+eight weeks. Such data-driven predictions are significant for teachers
+and decision-makers and allow them to take measures to reduce the number
+of failed students and identify which types of learning resources or
+student activities are better predictors of the student’s academic
+performance.</p>
 </div>
 <div id="methodology" class="section level1">
 <h1>Methodology</h1>
